--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "guzzlehttp/guzzle": "~5.3|~6.2"
     },
     "require-dev": {
-        "illuminate/container": "~5.5",
-        "illuminate/filesystem": "~5.5",
+        "illuminate/container": "~5.5|~6",
+        "illuminate/filesystem": "~5.5|~6",
         "phpunit/phpunit": "~5.7"
     },
     "autoload": {
